Add production payment flow UX
